--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mpm": "0.0.1",
-    "primeng": "^5.2.3",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
