--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.1.1",
+    "cached-path-relative": "^1.0.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mpm": "0.0.1",
-    "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
