--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.1.1",
     "cached-path-relative": "^1.0.2",
+    "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mpm": "0.0.1",
+    "ngx-tabset": "^2.1.0",
     "ngx-toastr": "^9.1.1",
     "node-sass": "^4.11.0",
     "primeicons": "^1.0.0",
