- office js added

--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@angular/platform-browser": "^7.2.6",
     "@angular/platform-browser-dynamic": "^7.2.6",
     "@angular/router": "^7.2.6",
+    "@microsoft/office-js": "^1.1.10",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "bootstrap": "^4.3.1",
     "cached-path-relative": "^1.0.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "mpm": "0.0.1",
     "ngx-tabset": "^2.1.0",
     "ngx-toastr": "^9.1.2",
     "node-sass": "^4.11.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.7",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.7",
     "rxjs": "^6.4.0",
@@ -48,7 +52,7 @@
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
