--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@angular/router": "^7.2.6",
     "@microsoft/office-js": "^1.1.10",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^20.2.0",
     "bootstrap": "^4.3.1",
     "cached-path-relative": "^1.0.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
+    "generator-office": "^1.1.26",
     "jquery": "^3.3.1",
     "mpm": "0.0.1",
+    "ng2-file-upload": "^1.3.0",
     "ngx-tabset": "^2.1.0",
     "ngx-toastr": "^9.1.2",
     "node-sass": "^4.11.0",
@@ -39,16 +43,20 @@
     "primeng": "^6.1.7",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "xlsx": "^0.14.3",
+    "xlsx-style": "^0.8.13",
+    "yo": "^2.0.5",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.3",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.3.3",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.2.6",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.3",
+    "@types/office-js": "0.0.166",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
